--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,33 @@
     <string name="control_add">Add and organize additional controls to appear in Control Center. The maximum is 8 controls.</string>
     <string name="include">INCLUDE</string>
     <string name="more_control">MORE CONTROLS</string>
+    <string name="background">Background</string>
+    <string name="transparent">Transparent</string>
+    <string name="current_wall">Current wallpaper</string>
+    <string name="defaul">Default background</string>
+    <string name="screen_blur">Screen blur behind</string>
+    <string name="cancel">cancel</string>
+    <string name="record">Record setup</string>
+    <string name="music">Music control</string>
+    <string name="custom_control">Customize controls</string>
+    <string name="language">Language</string>
+    <string name="control_center">Control Center</string>
+    <string name="ios_11">IOS 11</string>
+    <string name="how_to_use">How to use</string>
+    <string name="privacy_policy">Privacy Policy</string>
+    <string name="website">Website</string>
+    <string name="zing">Zing MP3</string>
+    <string name="musiclayout">Music layout</string>
+    <string name="longpress">Long press to music panel to expand music layout</string>
+    <string name="videocof">Video config</string>
+    <string name="advance">ADVANCE</string>
+    <string name="basic">BASIC</string>
+    <string name="resolution">Resolution</string>
+    <string name="bitrate">Bitrate(kbps)</string>
+    <string name="framerate">Frame rate(fps)</string>
+    <string name="i_frame">i-Frame interval</string>
+    <string name="avcprofile">AVCProfile</string>
+    <string name="orientation">Orientation</string>
+    <string name="record_w_audio">Record with audio</string>
+    <string name="record_s_w_audio">Record screen with audio use micro or your phone.You must grant Record Audio permission to use this funcition</string>
 </resources>
